# opium

./: .gitignore  README.md  ocp-integration-plan.md  opencode-system-prompt.txt  package-lock.json  package.json  replay-proxy-spawn.js  run-replay.txt
.github/workflows/: tauri.yml
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
server/src/: app.ts  config.ts  index.ts
server/src/db/: index.ts  schema.sql
server/src/middleware/: auth.ts  errorHandler.ts
server/src/routes/: account.ts  api.ts  pool.ts  proxy.ts  users.ts
server/src/services/: auth.ts  claudeCli.ts  claudeHome.ts  oauth.ts  pool.ts  proxy.ts
server/src/types/: index.ts
server/src/utils/: crypto.ts  logger.ts
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  proxy.rs  server_client.rs  state.rs  types.rs
